added submission codes for all models

--- a/model_final.ipynb
+++ b/model_final.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "id": "ba6fae0c",
       "metadata": {
         "id": "ba6fae0c"
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "id": "48a3625a",
       "metadata": {
         "id": "48a3625a"
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "id": "660f8f5d",
       "metadata": {
         "id": "660f8f5d"
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "id": "8e98ef68",
       "metadata": {
         "id": "8e98ef68"
@@ -112,19 +112,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "id": "86474bcb",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "86474bcb",
-        "outputId": "af3337ae-d071-4341-ff4e-d6f8bd34d5ba"
+        "outputId": "2e486d8b-3d1b-4f20-e462-d53fa787cceb"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
             "\n",
@@ -175,25 +175,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "85bfde99",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "85bfde99",
-        "outputId": "48511f06-58f9-45ff-8713-4abfacb1ea00"
+        "outputId": "680bc261-1389-428e-9b1c-a771a2c36d24"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
             "\n",
             "--- Ridge Fine-Tuning Complete ---\n",
-            "Ridge - Best Alpha (Grid): 300.0000\n",
-            "Ridge - Best Log RMSE (Grid CV): 0.1492\n"
+            "Ridge - Best Alpha (Grid): 211.1111\n",
+            "Ridge - Best Log RMSE (Grid CV): 0.1134\n"
           ]
         }
       ],
@@ -243,25 +243,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "e8ab77e0",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8ab77e0",
-        "outputId": "0601096d-b84f-45b6-c254-38726f4045d8"
+        "outputId": "18a904ea-d000-4f5e-d825-d1f6e3759f38"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
             "\n",
             "--- Lasso Fine-Tuning Complete ---\n",
             "Lasso - Best Alpha (Grid): 0.003000\n",
-            "Lasso - Best Log RMSE (Grid CV): 0.1563\n"
+            "Lasso - Best Log RMSE (Grid CV): 0.1081\n"
           ]
         }
       ],
@@ -311,25 +311,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "6132e08e",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6132e08e",
-        "outputId": "069d57ca-561f-4af7-f71e-3290aa719a98"
+        "outputId": "e32bdd26-0ddd-41a9-f49e-bfba47bf8c62"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n",
             "\n",
             "--- ElasticNet Fine-Tuning Complete ---\n",
-            "ElasticNet - Best Parameters (Grid): {'alpha': np.float64(0.04), 'l1_ratio': 0.15}\n",
-            "ElasticNet - Best Log RMSE (Grid CV): 0.1509 \n"
+            "ElasticNet - Best Parameters (Grid): {'alpha': np.float64(0.02333333333333333), 'l1_ratio': 0.15}\n",
+            "ElasticNet - Best Log RMSE (Grid CV): 0.1078 \n"
           ]
         }
       ],
@@ -380,25 +380,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "1ee19630",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ee19630",
-        "outputId": "7c5fa08b-1003-4438-c726-69d6a1f1b634"
+        "outputId": "b8fa61c2-e63b-4599-871f-f1c3b2787287"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 18 candidates, totalling 90 fits\n",
             "\n",
             "--- Random Forest Fine-Tuning Complete ---\n",
-            "Random Forest - Best Parameters (Grid): {'max_depth': 14, 'min_samples_leaf': 1, 'n_estimators': 300}\n",
-            "Random Forest - Best Log RMSE (Grid CV): 0.1378\n"
+            "Random Forest - Best Parameters (Grid): {'max_depth': 16, 'min_samples_leaf': 1, 'n_estimators': 350}\n",
+            "Random Forest - Best Log RMSE (Grid CV): 0.1266\n"
           ]
         }
       ],
@@ -452,25 +452,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "30d3967c",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "30d3967c",
-        "outputId": "568c0e86-1d2b-4787-d90c-bafdee518567"
+        "outputId": "5f7c886e-fb03-45aa-9ec6-1d792ed49ec2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 27 candidates, totalling 135 fits\n",
             "\n",
             "--- XGBoost Fine-Tuning Complete ---\n",
-            "XGBoost - Best Parameters (Grid): {'learning_rate': 0.07, 'max_depth': 5, 'n_estimators': 700}\n",
-            "XGBoost - Best Log RMSE (Grid CV): 0.1265\n"
+            "XGBoost - Best Parameters (Grid): {'learning_rate': 0.05, 'max_depth': 3, 'n_estimators': 700}\n",
+            "XGBoost - Best Log RMSE (Grid CV): 0.1135\n"
           ]
         }
       ],
@@ -524,19 +524,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "Zbhl9WsVuSZE",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zbhl9WsVuSZE",
-        "outputId": "823054e8-c9ab-4b86-e0e5-d4fae23390c6"
+        "outputId": "f6b96907-65c0-4ce8-e3a8-69193f799ac5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Starting Final Prediction using Tuned Lasso Model...\n",
@@ -545,11 +545,11 @@
             "File Name: submission_lasso_final.csv\n",
             "Submission Head:\n",
             "     Id     HotelValue\n",
-            "0   893  148929.851288\n",
-            "1  1106  316850.075368\n",
-            "2   414  106207.679685\n",
-            "3   523  161429.847853\n",
-            "4  1037  294558.472037\n"
+            "0   893  151324.515321\n",
+            "1  1106  326795.295705\n",
+            "2   414  106447.127882\n",
+            "3   523  156977.966693\n",
+            "4  1037  292659.232959\n"
           ]
         }
       ],
@@ -611,19 +611,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 13,
       "id": "_uslj9Jwu5Dg",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_uslj9Jwu5Dg",
-        "outputId": "2cb90a47-845b-4760-f994-0f5c0747e622"
+        "outputId": "05136226-84c3-45d3-8858-032ca68d24d9"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Starting Final Prediction using OLS Linear Regression Model...\n",
@@ -698,19 +698,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "9qx6PdmrxGoc",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9qx6PdmrxGoc",
-        "outputId": "e31b1e97-ea77-4bde-f590-c58693546aa9"
+        "outputId": "4fc2227c-30c4-41ef-89bf-f966887ec563"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Starting Final Prediction using Tuned XGBoost Model...\n",
@@ -718,12 +718,12 @@
             "--- XGBoost Submission File Created ---\n",
             "File Name: submission_xgb_final.csv\n",
             "Submission Head:\n",
-            "     Id    HotelValue\n",
-            "0   893  145901.46875\n",
-            "1  1106  344845.43750\n",
-            "2   414  106586.06250\n",
-            "3   523  160984.71875\n",
-            "4  1037  326256.18750\n"
+            "     Id     HotelValue\n",
+            "0   893  148385.640625\n",
+            "1  1106  346520.500000\n",
+            "2   414  102781.953125\n",
+            "3   523  156082.156250\n",
+            "4  1037  336281.250000\n"
           ]
         }
       ],
@@ -781,19 +781,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "kgENdxbFyJVR",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kgENdxbFyJVR",
-        "outputId": "50a880cf-37ba-4d79-97e1-4b7e76d88cff"
+        "outputId": "9d99613f-0699-41ee-9315-300b6365c965"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Starting Final Prediction using Tuned ElasticNet Model...\n",
@@ -802,11 +802,11 @@
             "File Name: submission_elastic_final.csv\n",
             "Submission Head:\n",
             "     Id     HotelValue\n",
-            "0   893  147852.188015\n",
-            "1  1106  312108.706816\n",
-            "2   414  109781.286913\n",
-            "3   523  154914.193929\n",
-            "4  1037  289483.130153\n"
+            "0   893  150333.617267\n",
+            "1  1106  324441.623139\n",
+            "2   414  107186.999218\n",
+            "3   523  155746.235155\n",
+            "4  1037  293219.443373\n"
           ]
         }
       ],
@@ -850,6 +850,190 @@
         "print(\"File Name: submission_elastic_final.csv\")\n",
         "print(\"Submission Head:\")\n",
         "print(submission_df.head())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ridge Submission"
+      ],
+      "metadata": {
+        "id": "Aw_j-OvfkIZG"
+      },
+      "id": "Aw_j-OvfkIZG"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Final Prediction and Submission using Tuned Ridge Model ---\n",
+        "print('\\nStarting Final Prediction using Tuned Ridge Model...')\n",
+        "from sklearn.linear_model import Ridge # Import the Ridge model\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# 1. LOAD the IDs from the original RAW test file\n",
+        "# This file is guaranteed to have the original 'Id' column.\n",
+        "# NOTE: Ensure 'test.csv' is available in the current directory.\n",
+        "test_ids_df = pd.read_csv('test.csv')\n",
+        "test_ids = test_ids_df['Id'] # Extract the Id series\n",
+        "\n",
+        "# 2. LOAD the PROCESSED features for prediction\n",
+        "# This file contains all the scaled and encoded features without 'Id'\n",
+        "# NOTE: Ensure 'final_processed_test.csv' is available and contains the correct features.\n",
+        "X_test_processed = pd.read_csv('final_processed_test.csv')\n",
+        "X_test_processed.fillna(0, inplace=True) # Assuming NaN imputation strategy is 0\n",
+        "\n",
+        "# 3. Use the best Ridge model found by GridSearchCV/RandomizedSearchCV\n",
+        "# IMPORTANT: This assumes a variable named 'best_ridge' was defined and trained\n",
+        "# in a preceding step (e.g., using a cross-validation script).\n",
+        "# Replace 'best_ridge' with your actual best model variable name if different.\n",
+        "final_ridge_model = best_ridge\n",
+        "\n",
+        "# 4. Make predictions on the processed test data\n",
+        "# The prediction will be in the log-transformed space (Log(1 + HotelValue))\n",
+        "predictions_log = final_ridge_model.predict(X_test_processed)\n",
+        "\n",
+        "# 5. Reverse the transformation: exp(x) - 1\n",
+        "predictions = np.expm1(predictions_log)\n",
+        "\n",
+        "# Ensure predictions are non-negative, as HotelValue cannot be less than zero\n",
+        "predictions = np.maximum(0, predictions)\n",
+        "\n",
+        "# 6. Create the submission DataFrame by combining the raw IDs and the predictions\n",
+        "submission_df = pd.DataFrame({\n",
+        "    'Id': test_ids,\n",
+        "    'HotelValue': predictions\n",
+        "})\n",
+        "\n",
+        "# 7. Save the file in the required format\n",
+        "submission_df.to_csv('submission_ridge_final.csv', index=False)\n",
+        "\n",
+        "print(\"\\n--- Submission File Created ---\")\n",
+        "print(\"File Name: submission_ridge_final.csv\")\n",
+        "print(\"Submission Head:\")\n",
+        "print(submission_df.head())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yjAfcHlhkKuD",
+        "outputId": "4702702a-aaf0-4c27-dc97-0bcec18c74e9"
+      },
+      "id": "yjAfcHlhkKuD",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Starting Final Prediction using Tuned Ridge Model...\n",
+            "\n",
+            "--- Submission File Created ---\n",
+            "File Name: submission_ridge_final.csv\n",
+            "Submission Head:\n",
+            "     Id     HotelValue\n",
+            "0   893  147277.722743\n",
+            "1  1106  324375.355492\n",
+            "2   414  102665.984532\n",
+            "3   523  156372.304749\n",
+            "4  1037  295728.816615\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest Submission"
+      ],
+      "metadata": {
+        "id": "tjDjkQm6kmJj"
+      },
+      "id": "tjDjkQm6kmJj"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Final Prediction and Submission using Tuned Random Forest Model ---\n",
+        "print('\\nStarting Final Prediction using Tuned Random Forest Model...')\n",
+        "from sklearn.ensemble import RandomForestRegressor # Import the Random Forest Regressor model\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# 1. LOAD the IDs from the original RAW test file\n",
+        "# This file is guaranteed to have the original 'Id' column.\n",
+        "# NOTE: Ensure 'test.csv' is available in the current directory.\n",
+        "test_ids_df = pd.read_csv('test.csv')\n",
+        "test_ids = test_ids_df['Id'] # Extract the Id series\n",
+        "\n",
+        "# 2. LOAD the PROCESSED features for prediction\n",
+        "# This file contains all the scaled and encoded features without 'Id'\n",
+        "# NOTE: Ensure 'final_processed_test.csv' is available and contains the correct features.\n",
+        "X_test_processed = pd.read_csv('final_processed_test.csv')\n",
+        "X_test_processed.fillna(0, inplace=True) # Assuming NaN imputation strategy is 0\n",
+        "\n",
+        "# 3. Use the best Random Forest model found by GridSearchCV/RandomizedSearchCV\n",
+        "# IMPORTANT: This assumes a variable named 'best_rf' was defined and trained\n",
+        "# in a preceding step (e.g., using a cross-validation script).\n",
+        "# Replace 'best_rf' with your actual best model variable name if different.\n",
+        "final_rf_model = best_rf\n",
+        "\n",
+        "# 4. Make predictions on the processed test data\n",
+        "# The prediction will be in the log-transformed space (Log(1 + HotelValue))\n",
+        "predictions_log = final_rf_model.predict(X_test_processed)\n",
+        "\n",
+        "# 5. Reverse the transformation: exp(x) - 1\n",
+        "predictions = np.expm1(predictions_log)\n",
+        "\n",
+        "# Ensure predictions are non-negative, as HotelValue cannot be less than zero\n",
+        "predictions = np.maximum(0, predictions)\n",
+        "\n",
+        "# 6. Create the submission DataFrame by combining the raw IDs and the predictions\n",
+        "submission_df = pd.DataFrame({\n",
+        "    'Id': test_ids,\n",
+        "    'HotelValue': predictions\n",
+        "})\n",
+        "\n",
+        "# 7. Save the file in the required format\n",
+        "submission_df.to_csv('submission_rf_final.csv', index=False)\n",
+        "\n",
+        "print(\"\\n--- Submission File Created ---\")\n",
+        "print(\"File Name: submission_rf_final.csv\")\n",
+        "print(\"Submission Head:\")\n",
+        "print(submission_df.head())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SzElnbA2kpPD",
+        "outputId": "adf5799d-01ea-47f9-cc51-155213082cce"
+      },
+      "id": "SzElnbA2kpPD",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Starting Final Prediction using Tuned Random Forest Model...\n",
+            "\n",
+            "--- Submission File Created ---\n",
+            "File Name: submission_rf_final.csv\n",
+            "Submission Head:\n",
+            "     Id     HotelValue\n",
+            "0   893  143329.964509\n",
+            "1  1106  321564.227682\n",
+            "2   414  109989.776342\n",
+            "3   523  154115.632842\n",
+            "4  1037  299901.453113\n"
+          ]
+        }
       ]
     }
   ],
